# imoveis_react

./: .gitignore  11f2bc3c-af28-4e60-b7c5-dd564a5ed4ed.xlsx  Gerenciador de anuncio 14.05.2024.xlsm  canalpro zap.xlsx  imoveis-14-05-2024.xls  imoveis-18-07-2024.xls  index.html  package-lock.json  package.json  tailwind.config.js  visitas.xlsx
src/: App.jsx  Config.jsx  LicenseContext.jsx  MainScreen.jsx  NavigationContext.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  xlsx.rs
src/Components/: ButtonExcel.jsx  PesosForm.jsx
src/components/: alertDialog.jsx  colors.js  dropFile.jsx
src/pages/: ConfigPesos.jsx  DashBoard.jsx  MainScreen.jsx  TabelaDinamica.jsx
