[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "fs-write-file", "dialog-all", "shell-all", "fs-read-file", "path-all", "fs-exists"] }
calamine = "0.25.0"
unicode-normalization = "0.1.19"
mouse-rs = "0.4.2"
chrono = "0.4.38"
xlsxwriter = "0.6.1"



[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
